Add structured data for SEO in multiple camping-related articles, enhancing visibility and context for search engines. Updated publication details and author information for improved content management.

--- a/best-nz-camping-apps.html
+++ b/best-nz-camping-apps.html
@@ -229,7 +229,23 @@
             ]
           }
           </script>
-        
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Best Camping Apps for New Zealand in 2025",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {
+              "@type": "Person",
+              "name": "Cristian Rus",
+              "sameAs": "https://x.com/cristianrus4"
+            },
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/best-nz-camping-apps"}
+          }
+          </script>
+
       </article>
     </main>
     <footer class="site-footer">
