--- a/campfire-rules-nz.html
+++ b/campfire-rules-nz.html
@@ -80,6 +80,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Fire Rules, Bans, and Safe Cooking Outdoors",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/campfire-rules-nz"}
+          }
+          </script>
+
           <h2>Open fires vs gas cookers</h2>
           <p>Open fires include campfires, wood burners, and charcoal grills. They require permits in <em>Restricted</em> fire seasons and are banned in <em>Prohibited</em> seasons. Gas cookers with an on/off valve are usually allowed, but some areas restrict all flames during extreme risk. Always check current notices.</p>
           <p>Check the Fire and Emergency New Zealand (FENZ) website or tap the fire widget in KiwiCamping for real-time status. If in doubt, cook with a gas stove on a stable surface away from vegetation.</p>
