--- a/camping-costs-nz.html
+++ b/camping-costs-nz.html
@@ -119,6 +119,19 @@
             </dl>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Costs of Camping in NZ, Budget Breakdown with Real Examples",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/camping-costs-nz"}
+          }
+          </script>
+
           <p class="internal-links">Related reading: <a href="best-nz-camping-apps.html">Best camping apps</a> · <a href="holiday-parks-nz-booking-guide.html">Holiday park booking guide</a> · <a href="two-week-camper-itinerary-nz.html">Two-week itinerary</a></p>
  
           <div class="download-banner">
