--- a/camping-packing-list-nz.html
+++ b/camping-packing-list-nz.html
@@ -80,6 +80,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Essential NZ Camping Packing List with Regional Variants",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/camping-packing-list-nz"}
+          }
+          </script>
+
           <h2>Core items for all trips</h2>
           <ul class="checklist">
             <li>Navigation: KiwiCamping offline maps, paper atlas backup, compass.</li>
