--- a/dump-stations-nz.html
+++ b/dump-stations-nz.html
@@ -76,6 +76,19 @@
             <p><strong>Key takeaway:</strong> Always use official dump stations listed in KiwiCamping, carry the right hoses, and rinse pads to keep councils confident in freedom camping access.</p>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Dump Stations and Waste Etiquette for Campers",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/dump-stations-nz"}
+          }
+          </script>
+
           <div class="download-banner">
             <p>Filter KiwiCamping for dump stations, potable water, and high-pressure rinse points before you set off.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
