--- a/free-camping-nz-legal.html
+++ b/free-camping-nz-legal.html
@@ -79,7 +79,20 @@
           <div class="download-banner">
             <p>Use the KiwiCamping app to filter for fee-free sites, verify bylaws, and download offline maps before you roll out.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
-          </div>
+      </div>
+
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Can You Camp for Free in NZ, Where It Is Legal and Safe",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/free-camping-nz-legal"}
+          }
+          </script>
 
           <h2>Is free camping legal in NZ?</h2>
           <p>Yes. <em>Where it is permitted</em>. The Freedom Camping Act&nbsp;2011 allows freedom camping on public land except where prohibited or restricted by local bylaws or DOC rules. Always read signs on arrival; signage overrides any app.</p>
