--- a/freedom-camping-rules-nz.html
+++ b/freedom-camping-rules-nz.html
@@ -154,6 +154,19 @@
           <script type="application/ld+json">
           {
             "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Freedom Camping in New Zealand, Rules by Region",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/freedom-camping-rules-nz"}
+          }
+          </script>
+
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
             "@type": "FAQPage",
             "mainEntity": [
               {
