--- a/holiday-parks-nz-booking-guide.html
+++ b/holiday-parks-nz-booking-guide.html
@@ -76,6 +76,19 @@
             <p><strong>Quick definition:</strong> A New Zealand holiday park is a privately or community-operated campground offering powered pads, communal facilities, and cabin upgrades. Booking requires selecting your region, site type, vehicle length, and arrival window.</p>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Holiday Parks in New Zealand, How to Choose and Book",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/holiday-parks-nz-booking-guide"}
+          }
+          </script>
+
           <div class="download-banner">
             <p>Keep this checklist beside you in KiwiCamping while you compare powered and non-powered sites.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
