--- a/nz-camping-seasons-weather-sandflies.html
+++ b/nz-camping-seasons-weather-sandflies.html
@@ -77,6 +77,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/nz-camping-seasons-weather-sandflies"}
+          }
+          </script>
+
           <h2>Seasonality by island and region</h2>
           <p><strong>North Island:</strong> Summer (Dec–Feb) brings warm temps in Northland and the Coromandel, though humidity can trigger afternoon showers. Autumn offers calm, settled weather in Hawke’s Bay and Taranaki, making it ideal for campervan roadies. Winter is mild near Wellington and Taranaki but cooler inland.</p>
           <p><strong>South Island:</strong> Summer offers long daylight, but alpine UV is intense. Pack sun shelter. Autumn colours shine in Central Otago, while spring delivers wild weather swings. Winter sees snow on passes such as Lindis and Arthur’s. Carry chains and follow live alerts in KiwiCamping.</p>
