--- a/responsible-camping-nz.html
+++ b/responsible-camping-nz.html
@@ -77,6 +77,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Responsible Camping in NZ, Leave No Trace Applied Locally",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/responsible-camping-nz"}
+          }
+          </script>
+
           <h2>Leave No Trace principles adapted to NZ</h2>
           <p>Plan ahead with DOC alerts, KiwiCamping offline data, and local council bylaws. Travel and camp on durable surfaces, dispose of waste properly using <a href="dump-stations-nz.html">dump stations</a>, leave what you find, minimise campfire impacts (see our <a href="campfire-rules-nz.html">fire rules</a>), respect wildlife, and be considerate of others.</p>
           <p>Pack out all rubbish, including food scraps. Many councils operate pack-in, pack-out systems even at serviced sites. Keep biodegradable items out of the bush to avoid introducing pests.</p>
