--- a/self-contained-vehicles-nz.html
+++ b/self-contained-vehicles-nz.html
@@ -76,6 +76,19 @@
             <p><strong>Self-contained vehicle definition:</strong> A vehicle that meets current NZ self-containment requirements, including a <strong>fixed toilet</strong>, plumbed fresh and waste water systems, venting, and waste containment sufficient to support occupants for at least three days without discharging waste.</p>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Self-Contained Vehicles in NZ, What It Really Requires",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/self-contained-vehicles-nz"}
+          }
+          </script>
+
           <div class="download-banner">
             <p>Use KiwiCamping to track certified sites, find inspection agents, and store your certification details.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
