--- a/top-scenic-campsites-nz.html
+++ b/top-scenic-campsites-nz.html
@@ -79,7 +79,20 @@
             <p>Install KiwiCamping so these universal links open instantly and work offline.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
- 
+
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Top 25 Scenic Campsites in New Zealand by Region",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/top-scenic-campsites-nz"}
+          }
+          </script>
+
           <h2>Northland to Wellington picks</h2>
           <ol class="scenic-list">
             <li><a href="https://campingapp.nz/link/site/doc-spirits-bay" target="_blank" rel="noopener">Spirits Bay / Kapowairua DOC Campsite</a> – far north sunrise views.</li>
