--- a/two-week-camper-itinerary-nz.html
+++ b/two-week-camper-itinerary-nz.html
@@ -80,6 +80,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Two-Week New Zealand Camper Itinerary, North and South Islands",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/two-week-camper-itinerary-nz"}
+          }
+          </script>
+
           <h2>Logistics: ferry, distances, seasons</h2>
           <p>This route crosses Cook Strait once. Book Interislander or Bluebridge well in advance; ferry days consume most of a day. Driving legs aim for ~3-4&nbsp;hours where possible; a few days can stretch longer, so swap activities accordingly. In winter, allow extra time for alpine passes and check road conditions.</p>
  
