--- a/where-to-camp-in-new-zealand.html
+++ b/where-to-camp-in-new-zealand.html
@@ -77,6 +77,19 @@
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Launch KiwiCamping</a>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Where You Can Camp in New Zealand, A Complete Location Guide",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/where-to-camp-in-new-zealand"}
+          }
+          </script>
+
           <h2>National parks, conservation areas, council reserves, private parks</h2>
           <p>New Zealand’s camping network spans four primary land types. <strong>DOC-managed campsites and huts</strong> (320+ camps and ~950 huts) cover national parks, forest parks, and scenic reserves. They range from $0 basic sites to serviced campgrounds with wardens. Use KiwiCamping filters or dive into our <a href="doc-campsites-huts-guide.html">DOC campsites and huts guide</a> to compare fees and booking rules.</p>
           <p><strong>Council reserves</strong> act as the backbone for freedom campers. They’re governed by local bylaws and typically allow one or two nights, often for <em>certified self-contained</em> (CSC) vehicles only. Tap the council badge inside KiwiCamping to read the exact clause before unpacking.</p>
