--- a/doc-campsites-huts-guide.html
+++ b/doc-campsites-huts-guide.html
@@ -118,6 +118,19 @@
             </dl>
           </div>
 
+          <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "DOC Campsites and Huts, Reservations, Fees, and Etiquette",
+            "datePublished": "2025-02-21",
+            "dateModified": "2025-02-21",
+            "author": {"@type": "Person", "name": "Cristian Rus", "sameAs": "https://x.com/cristianrus4"},
+            "publisher": {"@type": "Organization", "name": "KiwiCamping"},
+            "mainEntityOfPage": {"@type": "WebPage", "@id": "https://campingapp.nz/doc-campsites-huts-guide"}
+          }
+          </script>
+
           <p class="internal-links">Related reading: <a href="best-nz-camping-apps.html">Best camping apps</a> ↗ · <a href="holiday-parks-nz-booking-guide.html">Holiday park booking guide</a> ↗ · <a href="nz-camping-seasons-weather-sandflies.html">Seasonality and weather guide</a> ↗</p>
 
           <div class="download-banner">
