--- a/best-nz-camping-apps.html
+++ b/best-nz-camping-apps.html
@@ -26,7 +26,8 @@
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "NZD",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "description": "Free to download. KiwiCamping Pass in-app purchase required for full features. Free users can find locations but cannot save to lists or see details."
       },
       "publisher": {
         "@type": "Organization",
@@ -53,11 +54,6 @@
         <a class="btn download-btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
       </div>
     </nav>
-    <div class="appstore-floater" aria-label="Download on the App Store">
-      <a href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener" aria-label="Download KiwiCamping on the App Store">
-        <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1736726400" alt="Download KiwiCamping on the App Store" />
-      </a>
-    </div>
     <main class="article-main container">
       <article class="guide-article">
 
@@ -73,7 +69,7 @@
           </header>
 
           <div class="definition-box" role="note">
-            <p><strong>Featured snippet answer:</strong> The best camping apps for New Zealand help you stay legal and informed offline. <a href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">KiwiCamping</a> pairs official DOC data, council bylaw summaries, holiday park amenities, and dump stations in one place with self-contained filters. We also compare Rankers, CamperMate, WikiCamps, and others below.</p>
+            <p><strong>Featured snippet answer:</strong> The best camping apps for New Zealand help you stay informed and compliant offline. <a href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">KiwiCamping</a> pairs official DOC data, council bylaw summaries, holiday park amenities, and dump stations in one place with self-contained filters. We also compare Rankers, CamperMate, WikiCamps, and others below.</p>
           </div>
 
           <div class="download-banner">
@@ -127,7 +123,7 @@
       </figure>
 
           <h2>Pricing comparison</h2>
-          <p>KiwiCamping currently offers a generous free tier covering nationwide discovery, bylaws, and unlimited lists. An optional KiwiCamping Pro subscription unlocks collaborative trip sharing, weather layers, and additional photo storage. CamperMate monetises via bookings/deals, and WikiCamps uses a one‑off licence fee after a short trial.</p>
+          <p>KiwiCamping offers a free tier that allows you to find campsites, huts, holiday parks, dump stations, and toilets on the map, but you cannot save them to lists or see their details. The KiwiCamping Pass ($3.99 NZD for Week Pass, $12.99 NZD for Year Pass) unlocks full functionality including saving to lists, viewing details, trip planning, and offline access. CamperMate monetises via bookings/deals, and WikiCamps uses a one‑off licence fee after a short trial.</p>
           <p>Rankers bundles premium tools inside a yearly Rankers+ subscription. The upgrade adds offline downloads. AllTrails requires AllTrails+ for offline maps and focuses on tramping rather than vehicle camping.</p>
           <p>When considering cost, factor in roaming data, fines, and planning time. The more context an app gives you before you park, the fewer penalties you will pay. KiwiCamping’s proactive alerts help travellers avoid <strong>$400</strong> infringement tickets now common in many districts.</p>
 
@@ -153,11 +149,11 @@
             <h3>Best camping apps FAQ</h3>
             <dl>
               <dt>Is KiwiCamping really free?</dt>
-              <dd>Yes. The core map, bylaws, DOC listings, and dump stations are free. KiwiCamping Pro adds collaborative planning and premium weather overlays.</dd>
+              <dd>KiwiCamping has a free tier that lets you find campsites, huts, holiday parks, dump stations, and toilets on the map, but you cannot save them to lists or see their details. The KiwiCamping Pass ($3.99 NZD Week Pass, $12.99 NZD Year Pass) unlocks full functionality including saving to lists, viewing details, trip planning, and offline access.</dd>
               <dt>Which app has the most accurate freedom camping rules?</dt>
               <dd>KiwiCamping synchronises council bylaws directly and stores the official PDF, so even offline you can prove compliance.</dd>
               <dt>Can I use multiple apps on one trip?</dt>
-              <dd>Absolutely. Install KiwiCamping as your legal and planning source, then layer other apps for extra photos or deals. Keep this tab pinned so you can cross-check quickly.</dd>
+              <dd>Absolutely. Install KiwiCamping as your planning and information source, then layer other apps for extra photos or deals. Keep this tab pinned so you can cross-check quickly.</dd>
             </dl>
           </div>
 
