--- a/free-camping-nz-legal.html
+++ b/free-camping-nz-legal.html
@@ -25,7 +25,8 @@
         "@type": "Offer",
         "price": "0",
         "priceCurrency": "NZD",
-        "availability": "https://schema.org/InStock"
+        "availability": "https://schema.org/InStock",
+        "description": "Free to download. KiwiCamping Pass in-app purchase required for full features. Free users can find locations but cannot save to lists or see details."
       },
       "publisher": {
         "@type": "Organization",
@@ -52,11 +53,6 @@
         <a class="btn download-btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
       </div>
     </nav>
-    <div class="appstore-floater" aria-label="Download on the App Store">
-      <a href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener" aria-label="Download KiwiCamping on the App Store">
-        <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1736726400" alt="Download KiwiCamping on the App Store" />
-      </a>
-    </div>
     <main class="article-main container">
       <article class="guide-article">
 
